# libtorch_grpc_serving

./: CMakeLists.txt  build_server.sh  compile_protos.sh  export_ld_path.sh  get_go.sh  get_grpc.sh  install_and_build.sh  install_apt_packages.sh  install_cares.sh  install_grpc.sh  install_libtorch.sh  install_protobuf.sh  install_zlib.sh  setup_python.sh
protos/: example.proto  weld_bead_model.proto
python/: resnet_client.py
src/: CMakeLists.txt  model_server.cpp  resnet.cc  resnet.h  resnet_server.cc  weld_bead_model.cpp  weld_bead_model.hpp
